feat: show a layouts
